# agentgate

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/calc-agent/: Dockerfile  agent.py  agentgate.yaml
examples/chain-agent/: Dockerfile  agent.py  agentgate.yaml
examples/echo-agent/: Dockerfile  README.md  agent.py  agentgate.yaml
examples/my-agent/: agentgate.yaml
scripts/: backup-db.sh  build-disposable-list.sh
scripts/demo/: agent.py  demo-deploy.sh  demo.tape
sdk-ts/: package-lock.json  package.json
sdk-ts/src/: client.ts  errors.ts  index.ts
sdk-ts/tests/: client.test.ts
src/agentgate/: __init__.py
src/agentgate/cli/: main.py
src/agentgate/core/: config.py  redis.py
src/agentgate/db/: engine.py  models.py
src/agentgate/deployer/: main.py
src/agentgate/sdk/: __init__.py  async_client.py  client.py
src/agentgate/server/: account_routes.py  admin_routes.py  agent_logs.py  agent_reviews.py  agent_search.py  app.py  auth.py  auth_routes.py  billing.py  chain_routes.py  deploy_client.py  deploy_engine.py  deploy_routes.py  deps.py  disposable.py  email_service.py  healthcheck.py  log_retention.py  metrics.py  org_routes.py  plugins.py  ratelimit.py  routes.py  schemas.py  stripe_routes.py  task_runner.py  ucp_routes.py  url_validation.py
tests/: conftest.py  test_account_routes.py  test_auth_routes.py  test_deploy.py  test_hardening.py  test_health.py  test_integration.py  test_sdk.py  test_stripe_routes.py
(+51 files in other folders)
